--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body{
     background-color: #d9d9d9;
     font-weight: bold;
 }
+@font-face{
+    src: url(' ./font/postnobillscolombo-regular.ttf') format('truetype');
+    font-family: postnobillscolombo-bold;
+}
+@font-face{
+    src: url(' ./font/OpenSans-CondBold.ttf') format('truetype');
+    font-family: OpenSans-CondBold;
+}
 header{
     position: fixed;
     top: 0;
@@ -38,7 +46,7 @@ header{
     color: black;
     font-weight: bold;
     font-size: 1.5em;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: OpenSans-CondBold;
 }
 .don-button{
     background-color: #CE1E8B;
@@ -53,7 +61,7 @@ header{
     background-color: bisque;
 }
 .hero-section{
-    background: url('smallgirrl.jpg') no-repeat center center/cover;
+    background: url('image/smallgirrl.jpg') no-repeat center center/cover;
     height: 100vh;
     position: relative;
     display: flex;
@@ -70,20 +78,23 @@ header{
     font-weight: bold;
     position: relative;
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
     margin-top: 45px;
+    font-family: postnobillscolombo-bold;
 }
 .hero-section p{
-    padding-top: 40px;
+    padding-top: 10px;
     font-size: 1.6em;
     margin: 10px;
     color: black;
     font-weight: bold;
     margin-bottom: 125px;
+    font-family: OpenSans-CondBold;
 }
 .hero-section h2{
     text-align: left;
     font-size: 2.5em;
+    font-family: postnobillscolombo-bold;
 }
 .hero-section1{
     padding: 25px;
@@ -100,6 +111,7 @@ header{
     margin-bottom: 25px;
     margin-top: 75px;
     color: #CE1E8B;
+    font-family: postnobillscolombo-bold;
 }
 
 .hero-section1 image{
@@ -113,6 +125,7 @@ header{
     line-height: 1.5;
     font-weight: bold;
     text-align: left;
+    font-family: OpenSans-CondBold;
 }
 
 .donation-section{
@@ -124,6 +137,7 @@ header{
     color: #CE1E8B;
     margin-bottom: 30px;
     margin-top: 25px;
+    font-family: postnobillscolombo-bold;
 }
 .donation-content{
     display: flex;
@@ -141,15 +155,18 @@ header{
     font-size: 1.6rem;
     line-height: 1.8;
     font-weight: bold;
+    font-family: OpenSans-CondBold;
 }
 .donation-text h4{
     text-align: center;
     color: #CE1E8B;
     font-size: 1.4rem;
+    font-family: postnobillscolombo-bold;
 }
 .reference-number{
     color: black;
     font-weight: bold;
+    font-family: OpenSans-CondBold;
 }
 ul{
     margin-top: 10px;
@@ -169,15 +186,17 @@ ul li{
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 100px;
+    font-family: OpenSans-CondBold;
 }
 .events-section{
     padding: 20px;
     text-align: center;
 }
 .events-section h1{
-    font-size: 20px;
-    color: #d9d9d9;
+    font-size: 3rem;
+    color: #CE1E8B;
     margin-bottom: 30px;
+    font-family: postnobillscolombo-bold;
 }
 .events-grid{
 display: grid;
@@ -203,6 +222,7 @@ animation: fadein 1.5s ease-in-out forwards;
     font-size: 16px;
     line-height: 1.5;
     opacity: 0;
+    font-family: OpenSans-CondBold;
 }
 .slide-in-left{
     animation: slideinleft 1.5s ease-in-out forwards;
